# schema-to-tool

./: README.md  pyproject.toml
schema_to_tool/: __init__.py  cli.py  converter.py
schema_to_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
schema_to_tool/formats/: __init__.py  anthropic.py  openai.py
