[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-to-tool"
version = "0.1.0"
description = "Convert JSON Schema to OpenAI/Anthropic tool definitions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cognition Commons"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["json-schema", "openai", "anthropic", "tool", "function-calling", "llm"]
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
schema-to-tool = "schema_to_tool.cli:main"

[project.urls]
Homepage = "https://github.com/cognitioncommons/schema-to-tool"
Repository = "https://github.com/cognitioncommons/schema-to-tool"
Issues = "https://github.com/cognitioncommons/schema-to-tool/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["schema_to_tool*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
